<resources>
    <string name="app_name">Juego de frutas</string>
    <string name="personaje">personaje</string>
    <string name="et_nombre">Como te llamas?</string>
    <string name="btn_texto">JUGAR</string>

    // nivel 1
    <string name="etVidas">Manzanas:</string>
    <string name="jugadorNombre">Jugador:</string>
    <string name="totalScore">Score: 0</string>
    <string name="botonSumar">Comprobar</string>
    <string name="etRespuesta">Respuesta</string>
</resources>