<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/globos"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnJugar"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/fondoboton"
        android:onClick="jugar"
        android:text="@string/btn_texto"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.772" />

    <ImageView
        android:id="@+id/imageV_personaje"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:contentDescription="@string/personaje"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.143"
        app:srcCompat="@drawable/manzana"
        tools:ignore="ImageContrastCheck" />

    <EditText
        android:id="@+id/editT_Name"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:background="@drawable/fondoet"
        android:ems="10"
        android:hint="@string/et_nombre"
        android:inputType="textPersonName"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:textAlignment="center"
        android:textColor="@color/colorprimary_dark"
        android:textColorHint="@color/colorprimary_dark"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.612"
        tools:ignore="Autofill,TextContrastCheck" />

    <TextView
        android:id="@+id/txt_highScore"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@drawable/fondoet"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.942" />

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="418dp"
        android:layout_height="59dp"
        android:background="@color/colorprimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:subtitleTextColor="@color/icons"
        app:titleTextColor="@color/icons"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteY="-3dp" />

</androidx.constraintlayout.widget.ConstraintLayout>